Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Our second model attempted to predict whether 2012 films would receive an Oscar 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>This project was authored by: Leslie Tanner (<a href="https://github.com/lat7dg" class="user-mention">@lat7dg</a>), Matthew Hawthorn (<a href="https://github.com/MattHawthorn" class="user-mention">@MattHawthorn</a>), Michael Lenart (<a href="https://github.com/mdlenart" class="user-mention">@mdlenart</a>) and Nikhil Mascarenhas (<a href="https://github.com/nm1291" class="user-mention">@nm1291</a>)</p>
+<p>This project was authored by: Leslie Tanner (<a href="https://github.com/LeslieTanner" class="user-mention">@LeslieTanner</a>), Matthew Hawthorn (<a href="https://github.com/MattHawthorn" class="user-mention">@MattHawthorn</a>), Michael Lenart (<a href="https://github.com/mdlenart" class="user-mention">@mdlenart</a>) and Nikhil Mascarenhas (<a href="https://github.com/nm1291" class="user-mention">@nm1291</a>)</p>
         </section>
 
         <footer>
